# semantic_route_description

./: .gitignore  CMakeLists.txt  README.md  package.xml
files/: adream_mall.owl  catalog-v001.xml  place_description.owl  route_cost.owl  tmp.owl
files/ideapark/: ideapark.owl  place_description.owl  route_cost.owl
files/ideapark/stores/: products.owl  stores.owl
include/route_description/: CorridorPathfinder.h  CostComputer.h  OntologyManipulator.h  PathFinder.h  PlacePathfinder.h  PlaceToRegion.h  RegionPathfinder.h  Routes.h
launch/: ideapark.launch  route.launch  route_description.launch  route_ontology.launch
src/: CorridorPathfinder.cpp  CostComputer.cpp  OntologyManipulator.cpp  PathFinder.cpp  PlacePathfinder.cpp  PlaceToRegion.cpp  RegionPathfinder.cpp  Routes.cpp  main.cpp
srv/: SemanticRoute.srv
